[gd_scene load_steps=15 format=2]

[ext_resource path="res://gfx/button_power_up_flower_hp_normal.png" type="Texture" id=1]
[ext_resource path="res://gfx/button_power_up_flower_hp_pressed.png" type="Texture" id=2]
[ext_resource path="res://gfx/button_power_up_recover_flower_normal.png" type="Texture" id=3]
[ext_resource path="res://gfx/button_power_up_flower_hp_disabled.png" type="Texture" id=4]
[ext_resource path="res://gfx/button_power_up_dmg_normal.png" type="Texture" id=5]
[ext_resource path="res://gfx/button_power_up_hp_normal.png" type="Texture" id=6]
[ext_resource path="res://gfx/button_power_up_recover_flower_pressed.png" type="Texture" id=7]
[ext_resource path="res://gfx/button_power_up_dmg_disabled.png" type="Texture" id=8]
[ext_resource path="res://gfx/button_power_up_recover_flower_disabled.png" type="Texture" id=9]
[ext_resource path="res://gfx/button_power_up_dmg_pressed.png" type="Texture" id=10]
[ext_resource path="res://gfx/button_power_up_hp_pressed.png" type="Texture" id=11]
[ext_resource path="res://gfx/button_power_up_hp_disabled.png" type="Texture" id=12]
[ext_resource path="res://scripts/power_ups.gd" type="Script" id=13]

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="power_ups" type="Control"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.392157, 0.392157, 0.392157, 0.509804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 462.0
margin_bottom = 132.0
custom_constants/separation = 40

[node name="dmg" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 211.0
margin_bottom = 132.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 8 )

[node name="hp" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 251.0
margin_right = 462.0
margin_bottom = 132.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 11 )
texture_disabled = ExtResource( 12 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 172.0
margin_right = 462.0
margin_bottom = 304.0
custom_constants/separation = 40

[node name="f_hp" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_right = 211.0
margin_bottom = 132.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 4 )

[node name="r_f_hp" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 251.0
margin_right = 462.0
margin_bottom = 132.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
texture_disabled = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )
[connection signal="pressed" from="VBoxContainer/HBoxContainer/dmg" to="." method="_on_dmg_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/hp" to="." method="_on_hp_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/f_hp" to="." method="_on_f_hp_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/r_f_hp" to="." method="_on_r_f_hp_pressed"]
